--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                     
                     {% elif user.profile.is_coach %}
                         <a href="{% url 'coach_dashboard' %}">Jadwal Sesi</a>
-                        <a href="{% url 'coach_dashboard' %}">Profil Pelatih</a>
+                        <a href="{% url 'coach_profile' %}">Profil Pelatih</a>
                         <a href="{% url 'coach_dashboard' %}">Laporan Pendapatan</a>
                     
                     {% elif user.profile.is_customer %}
