--- a/templates/base.html
+++ b/templates/base.html
@@ -42,6 +42,7 @@
                         <a href="{% url 'coach_dashboard' %}">Jadwal Sesi</a>
                         <a href="{% url 'coach_profile' %}">Profil Pelatih</a>
                         <a href="{% url 'coach_dashboard' %}">Laporan Pendapatan</a>
+                        <a href="{% url 'coach_list' %}">Daftar Pelatih</a>
                     
                     {% elif user.profile.is_customer %}
                         <a href="{% url 'my_bookings' %}">Bookingan Saya</a>
